<resources>
    <string name="app_name">PhotoGallery2</string>
    <string name="btnTitleNext">Next</string>
    <string name="btnTitlePrev">Prev</string>
    <string name="btnTitleSnap">Snap</string>
    <string name="btnTitleSearch">Search</string>
    <string name="textCaptionHint">Edit Caption..</string>
    <string name="txtFilterInstr">Filter by Date and/or Keywords</string>
    <string name="txtKeywordHint">Enter Keywords Here…</string>
    <string name="btnTitleFilter">Filter</string>
    <string name="fish">Fish</string>
</resources>
