<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/previewImage"
        android:contentDescription="@string/fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/samplefish" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="41dp"
        android:onClick="btnNextClicked"
        android:text="@string/btnTitleNext" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:onClick="btnPrevClicked"
        android:text="@string/btnTitlePrev" />

    <Button
        android:id="@+id/btnSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:layout_marginStart="64dp"
        android:onClick="dispatchTakePictureIntent"
        android:text="@string/btnTitleSnap" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSnap"
        android:layout_marginEnd="108dp"
        android:onClick="btnSearchClicked"
        android:text="@string/btnTitleSearch" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSnap"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="TextView"
        tools:text="@string/textCaptionHint" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="1px"
        android:layout_height="1px"
        android:layout_alignEnd="@+id/btnPrev"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:contentDescription="WHHHHHHHHHHHHHHHHHHHHHOOOOOOOOOOO"
        android:src="@drawable/img_blur" />

</RelativeLayout>